--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,8 @@
 @import "components/button";
 @import "components/_card";
 @import "components/_composition";
-@import "components/_feature-box";
+@import "components/feature-box";
+@import "components/_story";
 
 @import "layout/grid";
 @import "layout/_header";
