--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,12 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/_card";
 @import "components/_composition";
 @import "components/feature-box";
-@import "components/_story";
+@import "components/story";
 
 @import "layout/grid";
 @import "layout/_header";
